tests/parser/fixtures/preprocessor/errors/error7.cpp
#include <tests/parser/fixtures/preprocessor/random_define.cpp>

int foo 132151

